# tf-al-mp

./: .gitignore  README.md  pyproject.toml
tests/: test_tf_al_module.py
tf_al_mp/stats/: mp_stats.py
tf_al_mp/utils/: __init__.py  moment_propagation.py
tf_al_mp/wrapper/: __init__.py  moment_propagation.py
