[tool.poetry]
name = "tf_al_module"
version = "0.1.0"
description = ""
authors = ["Maksim Sandybekov <maksim.sandybekov@live.de>"]

[tool.poetry.dependencies]
python = "^3.8"
tf-al = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
