[tool.poetry]
name = "tf_al_mp"
version = "0.0.1"
description = ""
authors = ["Maksim Sandybekov <maksim.sandybekov@live.de>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.2.0"
tf-al = "^0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
